# Avans-SYSPROG

./: README.md
opdracht-1/: CMakeLists.txt  main.cpp
opdracht-1/lib/: CMakeLists.txt  random_util.cpp  random_util.hpp  split-join.cpp  split-join.hpp  vector_helpers.cpp  vector_helpers.hpp
opdracht-2/: CMakeLists.txt  PluginWrapper.hpp  main.cpp
opdracht-2/common/: IPlugin.hpp
opdracht-2/plugins/: CMakeLists.txt  LowercasePlugin.cpp  LowercasePlugin.hpp  RemoveConsonantsPlugin.cpp  RemoveConsonantsPlugin.hpp  UppercasePlugin.cpp  UppercasePlugin.hpp
opdracht-2/resources/: lorem.txt
opdracht-3/: CMakeLists.txt  main.cpp
opdracht-3/plugins/: CMakeLists.txt  CrashPlugin.cpp  CrashPlugin.hpp  IPlugin.hpp
opdracht-3/tester/: CMakeLists.txt  IPlugin.hpp  PluginWrapper.hpp  main.cpp
opdracht-4/: CMakeLists.txt  main.cpp
opdracht-5/: CMakeLists.txt
opdracht-5/client/: CMakeLists.txt  main.cpp
opdracht-5/common/: consts.hpp  networking.hpp  throw.cpp  throw.hpp
opdracht-5/server/: CMakeLists.txt  RandomUtil.cpp  RandomUtil.hpp  main.cpp
opdracht-5/server/resources/: nl.words.txt
